syntax = "proto3";
package user_agent;

import "shared-defs.proto";

message LocalFileDescription {
  string local_id = 1;
  string file_path = 2;
  string hash_sha1 = 3;
}

message ListLocalFilesRequest {}

message ListLocalFilesResponse { repeated LocalFileDescription file_descs = 1; }

message FileAddRequest {
  string file_path = 1;
  optional string group_id = 2;
}

message FileAddResponse {}

message FileRemoveRequest {
  string file_path = 1;
  optional string group_id = 2;
}

message FileRemoveResponse {}

message FileListRequest {
  optional string remote_id = 1;
  optional string group_id = 2;
}

message FileListResponse { repeated LocalFileDescription file_list = 1; }

message HostListRequest { bool discover = 1; }

message HostListResponse { repeated shared.ServerInfo host_list = 1; }

message HostDiscoverRequest {}

message HostDiscoverResponse { repeated shared.ServerInfo host_list = 1; }

message GroupCreateRequest { string group_id = 1; }

message GroupCreateResponse {}

message GroupDeleteRequest { string group_id = 1; }

message GroupDeleteResponse {}

message GroupListRequest { optional string remote_id = 1; }

message GroupListResponse { repeated shared.GroupInfo group_list = 1; }
